[tool.poetry]
name = "impactflow"
version = "0.1.0"
description = ""
authors = ["Bill Dusch <bill@thebillistician.com>"]
readme = "README.md"
packages = [{include = "impactflow"}]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "*"
numpy = "*"
scipy = "*"
scikit-learn = "*"
SALib = "*"
pymoo = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
